tests/valid/definite/ListAssign_Valid_4.whiley
void System::main([string] args):
     a1 = [[1,2,3],[0]]
     a2 = a1
     a2[0] = [3,4,5]
     
     print str(a1[0])
     print str(a1[1])
     print str(a2[0])
     print str(a2[1])
