tests/invalid/simple/List_CompileFail_2.whiley
void System::main([string] args):
     int x
     [int] a2
      
     x = a2[0]